# libpagekite

./: .gitignore  AGPLv3.txt  API.md  API_JNI.md  Android.mk  Application.mk  CMakeLists.txt  COPYING.md  LICENSE-2.0.txt  Makefile  Makefile.am  Makefile.in  Makefile.pk  README-OLD.md  README.md  TODO.md  aclocal.m4  autogen.sh  bash.mxe  common.h  config.h.in  configure  configure.ac  fix.txt  httpkite.c  includes.h  libtool  pagekite-jni.c  pagekite.c  pagekite.h  pagekite_net.h  pagekitec  pagekitec.c  pagekiter.c  pkblocker.c  pkblocker.h  pkconn.c  pkconn.h  pkerror.c  pkerror.h  (+25 more)
bindings/: make-bindings.py
bindings/java/: Makefile.am  Makefile.in  net.pagekite.lib  pagekite-jni.c
bindings/java/net/pagekite/lib/: PageKiteAPI.java
bindings/python/: Makefile  ctypes-demo.py  cython-test.sh  cython_demo.py  libpagekite.py  libtest.py  test.py
bindings/python/libpagekite/: __init__.py  events.py
contrib/: Makefile  Makefile.pk
contrib/Apache/: Makefile  mod_pagekite.c  modules.mk
contrib/Windows-GUI/: PkController.cs  PkData.cs  PkKite.cs  PkKitePanel.cs  PkLib.cs  PkLogging.cs  PkLoginForm.cs  PkOptions.cs  PkOptionsForm.cs  PkPreferencesForm.cs  PkService.cs  PkSplashForm.cs  PkVersion.cs  README.md  Windows-GUI.csproj  Windows-GUI.sln
contrib/backends/: Makefile  Makefile.am  Makefile.in  Makefile.pk  PageKiteTest.java  common.h  hello.c  httpkite.c  pagekitec.c  ssh.c  sshkite.c
contrib/plugins/: README.md  web-ui.lua
contrib/relays/: Makefile  Makefile.am  Makefile.in  pagekiter.c  swarm.py
doc/: API.md  API_JNI.md  COPYING.md  Event_API.md  README-WIN.md  TODO.md
include/: pagekite.h
libev/: Android.mk  config.h  ev.c  ev_epoll.c  ev_select.c  evwrap.h
libpagekite/: Makefile  Makefile.am  Makefile.in  Makefile.pk  common.h  httpkite.c  libpagekite.pc.in  opensslthreadlock.c  opensslthreadlock.h  pagekite-jni.c  pagekite.c  pagekite.h.in  pagekitec.c  pagekiter.c  pd_sha1.c  pd_sha1.h  pkblocker.c  pkblocker.h  pkcommon.h  pkconn.c  pkconn.h  pkerror.c  pkerror.h  pkhooks.c  pkhooks.h  pklogging.c  pklogging.h  pklua.c  pklua.h  pklua.lua  pkmanager.c  pkmanager.h  pkmanager_test.c  pkproto.c  pkproto.h  pkrelay.c  pkrelay.h  pkstate.c  pkstate.h  pktunnel.c  (+11 more)
libpagekite/libev/: ev_config_android.h
libpagekite/mxe/: evwrap.c  evwrap.h
libpagekite/win/: MSVC_directions.txt  evwrap.h  getopt.c
libpagekite/win/export/: pkexport_build_instructions.txt
libpagekite/win/ui/: PkTransport.cs
mxe/: evwrap.c  evwrap.h
net.pagekite.lib/: PageKiteAPI.java
tools/: bash.armhf  bash.mxe  embedfiles.py  make-bindings.py  setenv  slow  update-copyright.sh
win/: MSVC_directions.txt  evwrap.c  evwrap.h  fix.txt  getopt.h  gettimeofday.c  gettimeofday.h
win/export/: pkexport.c  pkexport.h
win/ui/: Pagekite.cs  PagekiteImport.cs  PkAboutForm.cs  PkAddKiteForm.cs  PkConstants.cs  PkController.cs  PkData.cs  PkImport.cs  PkKite.cs  PkKiteDetailsForm.cs  PkKitePanel.cs  PkKiteUpdateEventArgs.cs  PkLogPanel.cs  PkLogging.cs  PkLoginForm.cs  PkMainForm.cs  PkOptions.cs  PkOptionsForm.cs  PkService.cs  PkServiceInfo.cs  PkSplashForm.cs
